Fixed some transcribing page scaling and scrollbars

--- a/frontend/src/app/home/home.scss
+++ b/frontend/src/app/home/home.scss
@@ -1,12 +1,4 @@
-.flex-2 {
-  flex: 2 1 0;
-}
-
-.flex-1 {
-  flex: 1 1 0;
-}
-
+.left-column,
 .right-column {
-  max-height: 600px;
+  max-height: 450px;
 }
-
